# Fitapp

./: README.md  docker-compose.yaml  setup_dev.sh
app/: .gitignore  CMakeLists.txt  Dockerfile  compileAndTest.sh  dfasd.txt
app/src/: Coordinator.cpp  Coordinator.hpp  DB_connection.cpp  DB_connection.hpp  Date.cpp  Date.hpp  Menu.cpp  Menu.hpp  Menu_Chain.cpp  Menu_Chain.hpp  Menu_Chain.tpp  Menu_Chain_Exception.cpp  Menu_Chain_Exception.hpp  Menu_State.cpp  Menu_State.hpp  Menus.cpp  Menus.hpp  Routine.cpp  Routine.hpp  SQL_Query.cpp  SQL_Query.hpp  User_Input_Strategy.cpp  User_Input_Strategy.hpp  WorkoutBuilder.cpp  WorkoutBuilder.hpp  clear.cpp  clear.hpp
app/src/OLD/: Menu.cpp  Menu.hpp
app/tests/: Coordinator_Tests.cpp  DB_connection_Tests.cpp  Database_Tests.cpp  Date_Tests.cpp  FIrstTimeSetup_Tests.cpp  Menu_Chain_Tests.cpp  Menu_Tests.cpp  Menu_test.cpp  QueryBuilder_Tests.cpp  TestDB.cpp  TestDB.hpp  WorkoutBuilder_Tests.cpp  connector_Example.cpp  routine_Tests.cpp
